most things work now
Player movement, noodle movement, noodles are danger

--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./style.css">
-    <title>Snakes</title>
+    <title>Danger Noodle</title>
   </head>
   <body>
-    <div style = "text-align:center;">
-      <h1>Snakes<h1>
-      <canvas id="gameCanvas"></canvas>
-    </div>
+      <div style="text-align:center;">
+          <h1>Danger Noodle</h1>
+          <canvas id="gameCanvas" />
+      </div>
 
-
-    <script src="script.js"></script>
+      <script src="js/GameArea.js"></script>
+      <script src="js/Volume.js"></script>
+      <script src="js/Component.js"></script>
+      <script src="js/Snake.js"></script>
+      <script src="js/Player.js"></script>
+      <script src="js/script.js"></script>
   </body>
 </html>
