implementing usable paths array

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           <h1>Danger Noodle</h1>
           <canvas id="gameCanvas" />
       </div>
-
+      <script src="js/PathSet.js"></script>
       <script src="js/GameArea.js"></script>
       <script src="js/Volume.js"></script>
       <script src="js/Component.js"></script>
